--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -105,7 +105,7 @@ header                  { margin-top: 10px; padding: 10px; background: #f5f5f5; 
 #chat .heading ul       { display: table; width: 100%; }
 #chat .heading li       { display: table-cell; }
 #chat .form-group       { margin-top: 5px; margin-bottom: 15px; }
-#chat .tweet-box        { overflow-x: hidden; overflow-y: auto; height: auto; padding: 10px 10px 219px; border-radius: 5px; background: #f0f0f0; }
+#chat .tweet-box        { overflow-x: hidden; overflow-y: auto; height: auto; padding: 10px; border-radius: 5px; background: #f0f0f0; }
 #chat .tweet-box li     { display: block; margin-top: 10px; }
 #chat .tweet-box p      { word-break: break-word; }
 #chat .text             { margin-top: 5px; margin-bottom: 5px; color: #fff; }
