--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -269,8 +269,8 @@ textarea.form-control   { height: auto; }
 
 .notes                  { margin-top: 5px; color: #999; font-size: 12px; }
 
-.pull-left              { margin: 10px 10px 0 0; }
-.ranking-user-name      { padding-top: 10px; }
+.rank-user              { margin: 10px 10px 0 0; }
+.rank-user-name         { padding-top: 10px; }
 
 
 /* Classes
@@ -379,10 +379,8 @@ td.q-text,
 td.r-name,
 td.r-winners            { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
 
-#ranking-total-tbl td.r-name:hover,
-#ranking-event-tbl td.r-winners:hover { color: #5bc0de; text-decoration: underline; }
-#ranking-total-tbl td.r-name:hover img,
-#ranking-event-tbl td.r-winners:hover img { opacity:0.9; filter:alpha(opacity=90); }
+#ranking-total-tbl td.r-name,
+#ranking-event-tbl td.r-winners { color: #5bc0de; text-decoration: underline; }
 
 .input-form label       { display: block; margin-top: 15px; }
 .option-ctrl            { display: inline-block; margin: 15px 0 20px; padding: 5px 10px; border: 1px solid #ccc; cursor: pointer; color: #333; border-radius: 4px; font-size: 16px; background: #eee; }
