--- a/app/views/ranking.scala.html
+++ b/app/views/ranking.scala.html
@@ -70,11 +70,11 @@
 				<button id="ranking-user-back" class="btn gray btn-small">@Messages("back")</button>
 			</div>
 			<div>
-				<div class="pull-left">
+				<div class="pull-left rank-user">
 					<img id="ranking-user-img" src="#"/>
 				</div>
 				<div>
-					<div id="ranking-user-name"></div>
+					<div id="ranking-user-name" class="rank-user-name"></div>
 					<div><span id="ranking-user-point"></span>Point</div>
 				</div>
 				<div class="clearFix"></div>
