--- a/app/views/frame.scala.html
+++ b/app/views/frame.scala.html
@@ -100,7 +100,7 @@
 		@if(params.debug) {
 			<li><a href="#debug" id="btn-debug"><i class="fa fa-bug"></i> @Messages("debug")</a></li>
 		}
-		<li><a href="#help"><i class="fa fa-question-circle" class="dynamic"></i> @Messages("help")</a></li>
+		<li><a href="#help" class="dynamic"><i class="fa fa-question-circle"></i> @Messages("help")</a></li>
 	</ul>
 </div>
 <div id="msg-dialog" style="display:none;"><span></span></div>
