--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -108,7 +108,7 @@ nav.paging-bar .btn i { color: #5bc0de; font-weight: bold; }
 #chat .tweet-box p      { word-break: break-word; }
 #chat .text             { margin-top: 5px; margin-bottom: 5px; color: #fff; }
 #chat .timestamp        { text-align: right; color: #f5f5f5; font-size: 10px; }
-#chat .input-box        { position: absolute; bottom: 0; display: block; width: 100%; margin-top: 20px; padding: 10px 10px 20px; border-top: 1px solid #ccc; background: #e5e5e5; }
+#chat .input-box        { position: absolute; bottom: 0; display: block; width: 100%; margin-top: 20px; margin-bottom: 10px; padding: 10px 10px 15px; border-radius: 5px; background: #eee; }
 #chat .align-left .text { color: #333; }
 #chat .align-left .timestamp { color: #aaa; }
 #chat-text-len span     { display: inline-block; padding: 5px; border-radius: 5px; color: #5bc0de; background: #fff; }
