--- a/app/views/chat.scala.html
+++ b/app/views/chat.scala.html
@@ -17,29 +17,34 @@
 			@Messages("notifyTweet")
 		</label>
 	</div>
-	<div>@Html(Messages("html.roomMember"))</div>
+	
 	<div class="tweet-box">
+		<div class="message">@Html(Messages("html.roomMember"))</div>
 		<ul></ul>
 	</div>
 	<div class="input-box">
 		<form role="form">
 			@userInfo.map { u =>
 			    <div class="heading">
-			        <ul>
-        				<li class="checkbox align-left">
-        					<label class="btn">
+                    <ul>
+    				    <li class="checkbox align-left">
+        				    <label class="btn">
         						<input id="chat-twitter" type="checkbox" checked="checked">
         						@Messages("postTwitter")
         					</label>
-        				</li>
-                        <li id="chat-text-len" class="align-right"><span>140</span></li>
-                    </ul>
+    				    </li>
+				        <li id="chat-text-len" class="align-right"><span>140</span></li>
+				    </ul>
 			    </div>
 				<div class="form-group">
-					<textarea id="chat-text" class="form-control"></textarea>
-				</div>
-				<div class="align-center">
-					<button id="btn-tweet" type="button" class="btn blue">@Messages("tweet")</button>
+				    <ul>
+    				    <li>
+        				    <textarea id="chat-text" class="form-control"></textarea>
+    				    </li>
+    				    <li>
+        				    <button id="btn-tweet" type="button" class="btn blue">@Messages("tweet")</button>
+    				    </li>
+				    </ul>
 				</div>
 			}
 		</form>
