--- a/app/views/frame.scala.html
+++ b/app/views/frame.scala.html
@@ -49,6 +49,12 @@
 <div class="tabbar">
     <ul class="clear-fix">
         <li>
+            <a href="#" id="">
+                <i class="fa fa-arrow-left fa-lg"></i>
+                <p>@Messages("back")</p>
+            </a>
+        </li>
+        <li>
             <a href="#" id="toolbar-question">
                 <i class="fa fa-check-circle fa-lg"></i>
                 <p>@Messages("question")</p>
