--- a/app/views/ranking.scala.html
+++ b/app/views/ranking.scala.html
@@ -49,9 +49,6 @@
 			</table>
 		</div>
 		<div id="ranking-event-detail" style="display:none;" class="tab-pane">
-			<div class="back-btn">
-				<button id="ranking-event-detail-back" class="btn gray btn-small">@Messages("back")</button>
-			</div>
 			<table class="table table-hover" id="ranking-event-detail-tbl">
 				<thead>
 					<tr>
@@ -66,16 +63,13 @@
 			</table>
 		</div>
 		<div id="ranking-user" style="display:none;" class="tab-pane">
-			<div class="back-btn">
-				<button id="ranking-user-back" class="btn gray btn-small">@Messages("back")</button>
-			</div>
-			<div>
+			<div class="user-area">
 				<div class="pull-left rank-user">
 					<img id="ranking-user-img" src="#"/>
 				</div>
 				<div>
 					<div id="ranking-user-name" class="rank-user-name"></div>
-					<div><span id="ranking-user-point"></span>Point</div>
+					<div><span id="ranking-user-point" class="rank-user-point"></span>Point</div>
 				</div>
 				<div class="clearFix"></div>
 			</div>
