--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -92,6 +92,8 @@ nav.paging-bar li:last-child { padding-right: 10px;}
 nav.paging-bar li:first-child .btn,
 nav.paging-bar li:last-child .btn { background: #fff; }
 nav.paging-bar li:nth-child(2) i { color: #fff; }
+nav.paging-bar .two-btn div { padding-right: 58px; }
+nav.paging-bar li.two-btn .btn { background: #5bc0de; }
 nav.paging-bar .btn     { border: 1px solid #5bc0de;  }
 nav.paging-bar .btn:disabled { border-color: #ccc; }
 nav.paging-bar .btn:disabled i { color: #ccc; }
