--- a/app/views/ranking.scala.html
+++ b/app/views/ranking.scala.html
@@ -49,6 +49,17 @@
 			</table>
 		</div>
 		<div id="ranking-event-detail" style="display:none;" class="tab-pane">
+			<nav class="paging-bar">
+				<ul>
+					<li>
+						<div class="pull-left">
+							<button type="button" class="btn" id="ranking-event-detail-back">
+								<i class="fa fa-angle-left fa-lg"></i>
+							</button>
+						</div>
+					</li>
+				</ul>
+			</nav>
 			<table class="table table-hover" id="ranking-event-detail-tbl">
 				<thead>
 					<tr>
@@ -63,6 +74,17 @@
 			</table>
 		</div>
 		<div id="ranking-user" style="display:none;" class="tab-pane">
+			<nav class="paging-bar">
+				<ul>
+					<li>
+						<div class="pull-left">
+							<button type="button" class="btn" id="ranking-user-back">
+								<i class="fa fa-angle-left fa-lg"></i>
+							</button>
+						</div>
+					</li>
+				</ul>
+			</nav>
 			<div class="user-area">
 				<div class="pull-left rank-user">
 					<img id="ranking-user-img" src="#"/>
