--- a/app/views/publishQuestion.scala.html
+++ b/app/views/publishQuestion.scala.html
@@ -64,7 +64,7 @@
 					<a href="#" target="_blank">#</a>
 				</div>
 			</form>
-			<div>
+			<div class="align-center">
 				<button id="publish-q-ranking" class="btn blue btn-small">@Messages("ranking")</button>
 			</div>
 		</div>
