--- a/app/views/mypage.scala.html
+++ b/app/views/mypage.scala.html
@@ -32,23 +32,20 @@
 			</table>
 		</div>
 		<div id="mypage-events" class="tab-pane" style="display:none;">
+            <nav class="paging-bar">
+			    <ul>
+				    <li>
+                        <div class="pull-left">
+                            <button id="mypage-events-back" type="button" class="btn">
+                                <i class="fa fa-angle-left fa-lg"></i>
+                            </button>
+                        </div>
+                    </li>
+                    <li></li>
+                </ul>
+            </nav>
 			<h3 id="mypage-events-roomName"></h3>
-			<p>@Messages("totalRanking"): <span id="mypage-events-total">-</span></p>
-			<table class="table table-hover">
-				<thead>
-					<tr>
-						<th class="r-title">@Messages("title")</th>
-						<th class="r-point">@Messages("point")</th>
-						<th class="r-correct">@Messages("correctCount")</th>
-					</tr>
-				</thead>
-				<tbody class="row-link">
-				</tbody>
-			</table>
-		</div>
-		<div id="mypage-events" class="tab-pane" style="display:none;">
-			<h3 id="mypage-events-roomName"></h3>
-			<p>@Messages("totalRanking"): <span id="mypage-events-total">-</span></p>
+			<p class="mypage-totalranking">@Messages("totalRanking"): <span id="mypage-events-total">-</span></p>
 			<table class="table table-hover">
 				<thead>
 					<tr>
