Set chat height

--- a/app/views/frame.scala.html
+++ b/app/views/frame.scala.html
@@ -46,7 +46,7 @@
 	</div>
 </div>
 @if(params.isInRoom) {
-<div class="tabbar">
+<div class="tabbar" id="tabbar">
     <ul class="clear-fix">
         <li>
             <a href="#" id="toolbar-question">
