Change char count element of chat

--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -313,7 +313,7 @@ textarea.form-control   { height: auto; }
 .checkbox input[type="checkbox"] { margin-right: 5px; }
 .checkbox + button      { margin-top: 10px; }
 
-.error                  { color: red; }
+.error                  { color: red!important; }
 .display-none           { display: none; }
 .inline-block           { display: inline-block; }
 .align-left             { text-align: left; }
