--- a/app/views/chat.scala.html
+++ b/app/views/chat.scala.html
@@ -23,7 +23,7 @@
         						@Messages("postTwitter")
         					</label>
     				    </li>
-				        <li id="chat-text-len" class="align-right"><span>140</span></li>
+				        <li id="chat-text-len" class="align-right"><span></span></li>
 				    </ul>
 			    </div>
 				<div class="form-group">
