--- a/app/views/chat.scala.html
+++ b/app/views/chat.scala.html
@@ -8,8 +8,8 @@
 		</div>
 	}
 	
+	<div class="room-member">@Html(Messages("html.roomMember"))</div>
 	<div class="tweet-box">
-		<div class="message">@Html(Messages("html.roomMember"))</div>
 		<ul></ul>
 	</div>
 	<div class="input-box">
