--- a/app/views/makeQuestion.scala.html
+++ b/app/views/makeQuestion.scala.html
@@ -48,7 +48,7 @@
 		</div>
 		<div id="make-q-publish" class="align-center" style="display:none;">
 			<div class="checkbox">
-				<label for="make-q-includeRnak" class="btn">
+				<label for="make-q-includeRank" class="btn">
 					<input id="make-q-includeRank" type="checkbox" value="true" checked="checked"> @Messages("includeToRanking")
 				</label>
 			</div>
