--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -86,7 +86,7 @@ header                  { margin-top: 10px; padding: 10px; background: #f5f5f5; 
 #publish-q-text span.cur { display: block; }
 #publish-q-detail       { margin-top: 10px; padding-top: 10px; border-top: 1px dashed #ccc; }
 
-#make-q-publish         { margin-top: 20px; border-top: 1px dashed #f5f5f5; }
+#make-q-publish         { margin-top: 20px; border-top: 1px solid #eee; }
 
 nav.paging-bar ul       { display: table; width: 100%; padding-right: 0; padding-left: 0; border-bottom: none; background: #f5f5f5;}
 nav.paging-bar li       { display: table-cell; padding: 0; }
@@ -108,8 +108,8 @@ nav.paging-bar .btn i   { color: #5bc0de; font-weight: bold; }
 
 #event-members .paging-bar  { margin-top: 10px; margin-bottom: 10px; }
 #event-members .paging-bar li { padding-top: 5px; padding-bottom: 5px; }
-#event-detail h3        { margin-top: 15px; }
-#event-detail label     { display: block; margin-top: 10px; padding-top: 10px; border-top: 1px dashed #ccc; }
+#event-detail h3        { margin-top: 20px; }
+#event-detail label     { display: block; margin-top: 10px; padding-top: 10px; border-top: 1px dashed #eee; }
 #event-detail h3 + label { border-top: none; }
 #event-detail label.btn { display: inline-block; border-top: 1px solid #ccc; }
 
@@ -119,30 +119,29 @@ nav.paging-bar .btn i   { color: #5bc0de; font-weight: bold; }
 
 #chat ul                { display: table; width: 100%; }
 #chat li                { display: table-cell; vertical-align: bottom; }
-#chat .tweet-box        { position: relative; overflow-x: hidden; overflow-y: auto; width: 100%; margin-top: 10px;  padding: 10px; border: 1px solid #ccc; border-radius: 5px; }
+#chat .room-member      { font-weight: bold; }
+#chat .tweet-box        { position: relative; overflow-x: hidden; overflow-y: auto; width: 100%; margin-top: 10px; padding: 10px; }
 #chat .tweet-box li     { display: block; }
 #chat .tweet-box p      { word-break: break-word; }
-#chat .tweet-box .message { font-weight: bold; }
 #chat .contributor      { margin-top: 10px; }
 #chat .form-group       { margin-top: 5px; margin-bottom: 10px; }
 #chat .form-group li:last-child { width: 85px; vertical-align: middle; padding-left: 5px;}
 #chat .text             { margin-top: 5px; margin-bottom: 5px; color: #fff; }
 #chat .timestamp        { text-align: right; color: #f5f5f5; font-size: 10px; }
-#chat .input-box        { position: absolute; bottom: 0; right: 0; left: 0; display: block; width: 100%; margin-top: 10px; padding: 5px 10px 0; border-radius: 5px; background: #eee; }
-
+#chat .input-box        { position: absolute; bottom: 0; right: 0; left: 0; display: block; width: 100%; margin-top: 10px; margin-bottom: 60px; padding: 5px 10px 10px; border-radius: 5px; background: #eee; }
 #chat .align-left .text { color: #333; }
 #chat .align-left .timestamp { color: #aaa; }
 #chat-text-len span     { display: inline-block; margin-top: 10px; padding: 5px; border-radius: 5px; color: #5bc0de; background: #fff; }
 
 .contributor img        { margin-right: 5px; }
-.balloon-border         { position: relative; z-index: 0; display: inline-block; min-width: 20%; max-width: 70%; margin-top: 15px; padding: 5px 10px 5px; border: 1px solid #5bc0de; border-radius: 5px; background: #5bc0de; }
+.balloon-border         { position: relative; z-index: 0; display: inline-block; min-width: 10%; max-width: 70%; margin-top: 15px; padding: 0 10px; border: 1px solid #5bc0de; border-radius: 5px; background: #5bc0de; }
 .balloon-border:before  { content: ""; position: absolute; top: -9px; z-index: 1; display: block; width: 0; border: 10px solid transparent; border-top-width: 0; border-bottom-color: #5bc0de; }
 .balloon-border:after   { content: ""; position: absolute; top: -10px; display: block; width: 0; border: 10px solid transparent; border-top-width: 0; border-bottom-color: #5bc0de; }
 .align-right .balloon-border:before,
-.align-right .balloon-border:after { right: 5%; }
+.align-right .balloon-border:after { right: 25px; }
 .align-left .balloon-border { background: #fff; }
 .align-left .balloon-border:before,
-.align-left .balloon-border:after { left: 5%; }
+.align-left .balloon-border:after { left: 25px; }
 .align-left .balloon-border:before { border-bottom-color: #fff; }
 
 .container              { min-height: 100%; margin-right: auto; margin-left: auto; padding-right: 10px; padding-left: 10px; }
@@ -301,7 +300,7 @@ textarea.form-control   { height: auto; }
 .btn-question li:nth-child(1) { width: 10%; text-align: left; }
 .btn-question li:nth-child(2) { width: auto; padding-left: 10px; text-align: left; word-break: break-all; }
 .btn-question li:nth-child(3) { width: 15%; margin-right: 15px; text-align: right; }
-.box-button             { padding-top: 15px; border-top: 1px solid #f5f5f5; }
+.box-button             { padding-top: 15px; border-top: 1px solid #eee; }
 .buttons                { margin: 0 -10px; padding: 15px 10px; }
 
 .table                  { width: 100%; table-layout: fixed; }
@@ -327,9 +326,12 @@ textarea.form-control   { height: auto; }
 
 /* Components
 -----------------------------------------------------------------------------*/
-.container              { position: relative; height: 100%; padding-top: 70px; padding-bottom: 46px; }
+.container              { position: relative; height: 100%; padding-top: 70px; }
 .container i            { margin-left: 5px; }
 .container nav i        { margin-left: 0; }
+
+.workspace              { height: 100%; padding-bottom: 70px; }
+
 .toolbar                { position: fixed; right: 0; left: 0; z-index: 1030; width: 100%; min-height: 50px; margin-bottom: 20px; border: 1px solid #e7e7e7; border-radius: 0; background: #f8f8f8; }
 /*
 .toolbar ul             { display: table; width: 100%; margin: 0; padding-left: 0; }
