--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -81,7 +81,7 @@ header                  { margin-top: 10px; padding: 10px; background: #f5f5f5; 
 #publish-question a     { vertical-align: middle; }
 #publish-question .buttons .btn  { min-height: 44px; white-space: inherit; }
 #publish-q-seq          { padding: 5px 10px; color: #fff; font-size: 16px; font-weight: bold; background: #5bc0de; }
-#publish-q-text         { min-height: 100px; padding: 10px; }
+#publish-q-text         { height: auto; margin: 10px 0; padding: 10px 10px 30px; }
 #publish-q-text span    { float: left; display: none; }
 #publish-q-text span.cur { display: block; }
 #publish-q-detail       { margin-top: 10px; padding-top: 10px; border-top: 1px dashed #ccc; }
