--- a/app/views/publishQuestion.scala.html
+++ b/app/views/publishQuestion.scala.html
@@ -57,7 +57,7 @@
 			<form class="input-form">
 				<div id="publish-q-description" style="display:none;">
 					<label>@Messages("description")</label>
-					<textarea rows="5" class="form-control" readonly="readonly"></textarea>
+					<pre class="form-control"></pre>
 				</div>
 				<div id="publish-q-url" style="display:none;">
 					<label>@Messages("relatedUrl")</label>
