--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -67,18 +67,18 @@
 			</div>
 			<div>
 				<label>@Messages("description")</label>
-				<textarea id="room-detail-description" rows="5" class="form-control" disabled="disabled"></textarea>
+				<pre id="room-detail-description" class="form-control" disabled="disabled"></pre>
 			</div>
 			<div id="room-detail-event">
 				<h3>@Messages("nextEventInformation")</h3>
 				<label>@Messages("title")</label>
-				<p id="room-detail-title"></p>
+				<p id="room-detail-title" class="indent"></p>
 				<label>@Messages("scheduledDate")</label>
-				<p id="room-detail-date"></p>
+				<p id="room-detail-date" class="indent"></p>
 				<label>@Messages("capacity")</label>
-				<p id="room-detail-capacity"></p>
+				<p id="room-detail-capacity" class="indent"></p>
 				<label>@Messages("description")</label>
-				<textarea id="room-detail-description2" rows="5" class="form-control" disabled="disabled"></textarea>
+				<pre id="room-detail-description2" class="form-control" disabled="disabled"></pre>
 			</div>
 		</div>
 	</div>
