--- a/app/views/mypage.scala.html
+++ b/app/views/mypage.scala.html
@@ -60,6 +60,18 @@
 			</table>
 		</div>
 		<div id="mypage-questions" class="tab-pane" style="display:none;">
+            <nav class="paging-bar">
+			    <ul>
+				    <li>
+                        <div class="pull-left">
+                            <button id="mypage-questions-back" type="button" class="btn">
+                                <i class="fa fa-angle-left fa-lg"></i>
+                            </button>
+                        </div>
+                    </li>
+                    <li></li>
+                </ul>
+            </nav>
 			<table class="table table-hover">
 				<thead>
 					<tr>
