--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -67,7 +67,7 @@
 			</div>
 			<div>
 				<label>@Messages("description")</label>
-				<pre id="room-detail-description" class="form-control" disabled="disabled"></pre>
+				<pre id="room-detail-description" class="pre-break-word"></pre>
 			</div>
 			<div id="room-detail-event">
 				<h3>@Messages("nextEventInformation")</h3>
@@ -78,7 +78,7 @@
 				<label>@Messages("capacity")</label>
 				<p id="room-detail-capacity" class="indent"></p>
 				<label>@Messages("description")</label>
-				<pre id="room-detail-description2" class="form-control" disabled="disabled"></pre>
+				<pre id="room-detail-description2 pre-break-word" class="indent"></pre>
 			</div>
 		</div>
 	</div>
