--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -85,10 +85,11 @@ header                  { margin-top: 10px; padding: 10px; background: #f5f5f5; 
 #publish-q-text span    { float: left; display: none; }
 #publish-q-text span.cur { display: block; }
 #publish-q-detail       { margin-top: 10px; padding-top: 10px; border-top: 1px dashed #ccc; }
+#publish-q-detail .btn  { margin-top: 10px;}
 
 #make-q-publish         { margin-top: 20px; border-top: 1px solid #eee; }
 
-nav.paging-bar ul       { display: table; width: 100%; padding-right: 0; padding-left: 0; border-bottom: none; background: #f5f5f5;}
+nav.paging-bar ul       { display: table; width: 100%; padding: 10px 0; border-bottom: none; background: #f5f5f5;}
 nav.paging-bar li       { display: table-cell; padding: 0; }
 nav.paging-bar li:first-child { padding-left: 10px; }
 nav.paging-bar li:last-child { padding-right: 10px;}
@@ -287,8 +288,11 @@ textarea.form-control   { height: auto; }
 .user-area              { margin-top: 10px; padding: 10px; font-size: 12px; background: #ccc; }
 .rank-user-point        { margin-right: 5px; color: #111; font-size: 16px; }
 
-#room-detail-event      { margin-top: 10px; padding: 10px; border: 1px solid #ccc; border-radius: 4px; }
-#room-detail-event h3   { margin-top: 0; }
+#room-detail-event      { margin-top: 20px; padding: 10px; border: 1px solid #ccc; border-radius: 4px; }
+#room-detail-event h3   { margin: -10px; padding: 10px 10px 5px; background: #eee; }
+
+.pre-break-word         { overflow: auto; white-space: pre-wrap; word-wrap: break-word; }
+
 
 /* Classes
 -----------------------------------------------------------------------------*/
