--- a/app/views/publishQuestion.scala.html
+++ b/app/views/publishQuestion.scala.html
@@ -1,8 +1,16 @@
 @(sessionInfo: SessionInfo)(implicit lang: Lang)
 <div id="publish-question" class="workspace">
-	<div id="publish-q-back" style="display:none;" class="back-btn">
-		<button id="publish-q-back-btn" class="btn gray btn-small">@Messages("back")</button>
-	</div>
+	<nav class="paging-bar">
+		<ul>
+			<li>
+				<div class="pull-left">
+					<button type="button" class="btn" id="publish-q-back-btn">
+						<i class="fa fa-angle-left fa-lg"></i>
+					</button>
+				</div>
+			</li>
+		</ul>
+	</nav>
 	<div id="publish-q-default">
 		<div class="progress" id="publish-q-progress">
 			<div id="publish-q-progress" class="progress-bar progress-bar-success" role="progressbar" style="width: 100%">
@@ -57,7 +65,7 @@
 			<form class="input-form">
 				<div id="publish-q-description" style="display:none;">
 					<label>@Messages("description")</label>
-					<pre class="form-control"></pre>
+					<pre class="form-control pre-break-word"></pre>
 				</div>
 				<div id="publish-q-url" style="display:none;">
 					<label>@Messages("relatedUrl")</label>
