--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -292,7 +292,9 @@ textarea.form-control   { height: auto; }
 #room-detail-event h3   { margin: -10px; padding: 10px 10px 5px; background: #eee; }
 
 .pre-break-word         { overflow: auto; white-space: pre-wrap; word-wrap: break-word; }
-
+.explanation            { display: block; width: 100%; line-height: 1.428571429; vertical-align: middle; padding: 6px 12px; border: 1px solid #ccc; border-radius: 4px; color: #555; font-size: 14px; background-color: #fff; background-image: none;
+                          -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+                          -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s; transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s; }
 
 /* Classes
 -----------------------------------------------------------------------------*/
