--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -430,7 +430,7 @@ tr:nth-child(even).q-published td { background: #e6e6e6; }
 
 th.correctCount         { text-align: right; }
 
-.table-striped tr.q-published td { color: #fff; background: #5bc0de !important; }
+.table-striped tr.q-published td { background: #ccc !important; }
 
 
 /* jQuery UI
