--- a/app/views/publishQuestion.scala.html
+++ b/app/views/publishQuestion.scala.html
@@ -65,7 +65,7 @@
 			<form class="input-form">
 				<div id="publish-q-description" style="display:none;">
 					<label>@Messages("description")</label>
-					<pre class="form-control pre-break-word"></pre>
+					<pre class="explanation pre-break-word"></pre>
 				</div>
 				<div id="publish-q-url" style="display:none;">
 					<label>@Messages("relatedUrl")</label>
